:bug: Fix unmodifiable voting options set