@@ -4,6 +4,7 @@ import jakarta.persistence.Entity;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.Id;
 import jakarta.validation.constraints.NotNull;
+import java.util.Collections;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.UUID;
@@ -15,7 +16,8 @@ import lombok.Setter;
 @Getter
 @SuppressWarnings("PMD.ShortClassName")
 public class Vote {
-    public static final Set<Integer> VOTING_OPTIONS = new TreeSet<>(Set.of(1, 2, 3, 5, 8, 13, 21));
+    public static final Set<Integer> VOTING_OPTIONS = Collections.unmodifiableSet(new TreeSet<>(
+            Set.of(1, 2, 3, 5, 8, 13, 21)));
 
     @GeneratedValue
     @Id
